--- a/SantaAPI/appsettings.json
+++ b/SantaAPI/appsettings.json
@@ -6,8 +6,8 @@
   },
 
   "Jwt": {
-    "Site": "http://www.security.org",
-    "SigningKey": "Paris Berlin Cairo Sydney Tokyo Beijing Rome London Athens",
+    "Site": "http://www.**********.org",
+    "SigningKey": "**********",
     "ExpiryInMinutes": "60"
   },
 
